style.css
@import url('https://fonts.googleapis.com/css2?family=Chicle&display=swap');

*,
*::after,
*::before {
    margin: 0;
    padding: 0;
    box-sizing: inherit;
}

:root {
    /* COLORS */
    --color-font1: hsl(41, 75%, 51%);
    --nav-a-hover-clr: hsl(167, 35%, 80%);
    --main-a-hover-clr: hsl(41, 75%, 51%);
    --main-a-visited-clr: hsl(120, 100%, 26%);

    /* BG COLORS */
    --nav-bg: hsl(279, 91%, 13%);
    --card-bg: rgba(255, 255, 255, 0.2);

    /* BORDER */
    --border-blc-st: 1.5px solid rgba(255, 255, 255, 0.5);
    --border-inl-end: 1px solid rgba(255, 255, 255, 0.5);
    --border-radius: 10px;
    --border: solid red 1px;
    --border-2: solid lime 1px;

    /* FONT SIZE */
    --h1-new-size: clamp(40px, 20vw, 100px);
    --h2-new-size: clamp(30px, 15vw, 75px);
    --p-font-size: 1.125rem;
    --about-p-font-size: clamp(1.125rem, calc(1rem + 1vh), 2rem);
    --caption-font-size: 1.35rem;
    --socials-icon-size: clamp(18px, 9vw, 45px);

    /* PG TRANSITION */
    --transition-value: 0.5s ease-out;

    /* MARGIN */
    --marg-blc-about: calc(1rem + 0.5vh);

    /* PADDING */
    --pad-inl-abt-art: calc(0.8rem + 1vh);

    /* SHADOW */
    --card-shadow: -10px 20px 30px 5px rgba(0, 0, 0, 0.6);
}

html {
    box-sizing: border-box;
    color: var(--nav-bg);
    font-family: 'Chicle', cursive;
    letter-spacing: 1.5px;
}

body {
    position: relative;
    min-block-size: 100vh;
    text-align: center;
    background: url('resources/images/milad-fakurian-PGdW_bHDbpI-unsplash-medium.jpg')
        center/cover fixed;
    overflow: scroll;
}

p {
    font-size: var(--p-font-size);
    line-height: 1.5;
}

a {
    text-decoration: none;
    color: var(--nav-bg);
    cursor: pointer;
    transition: color 300ms ease-out 100ms;
}
a:hover,
a:focus {
    color: var(--main-a-hover-clr);
}

nav {
    background-color: var(--nav-bg);
    position: fixed;
    inset-block-start: 0;
    inline-size: 100%;
    z-index: 10;
    clip-path: ellipse(80% 100% at 50% 0%);
    font-size: var(--p-font-size);
}

nav ul {
    display: flex;
    justify-content: space-around;
}

nav li {
    margin: 1rem;
    color: var(--color-font1);
    transition: all 300ms ease-out 100ms;
}

li {
    list-style-type: none;
}

nav a {
    color: inherit;
}

.cur-pg,
[href='#'] {
    color: var(--nav-a-hover-clr);
    transform: scale(1.5);
    cursor: not-allowed;
}

nav a:hover,
nav a:focus,
nav li:hover,
nav li:focus {
    color: var(--nav-a-hover-clr);
    transform: scale(1.5);
}

main {
    padding-block-start: 4rem;
    padding-block-end: 3rem;
    padding-inline: 1rem;
}

main a:visited {
    color: var(--main-a-visited-clr);
}

.orb-shadow {
    border-radius: 120px;
    max-inline-size: min-content;
    max-inline-size: max-content;
    margin-inline: auto;
    margin-block: 5vh;
    box-shadow: inset 0px 0px 5px 2vh rgba(0, 0, 0, 0.2),
        0px 0px 50px 90vh rgba(0, 0, 0, 0.2);
    padding-block: clamp(29px, 4vh, 50px);
    padding-inline: clamp(35px, 10vw, 80px);
}

.orb-shadow p {
    padding-block-end: 2vh;
    padding-inline: 12px;
    font-size: var(--socials-icon-size);
}

h1 {
    font-size: var(--h1-new-size);
    letter-spacing: 2px;
}

h2 {
    font-size: var(--h2-new-size);
    letter-spacing: 2px;
}

/* PROJECT CARDS */
#project-list {
    display: flex;
    justify-content: center;
    flex-flow: wrap;
    font-size: 1.125rem;
}

.project {
    margin: 1rem 1rem 2rem;
    padding: 0.75rem;
    inline-size: clamp(300px, 30vw, 500px);
    box-shadow: var(--card-shadow);
    border-radius: var(--border-radius);
    border-block-start: var(--border-blc-st);
    border-inline-end: var(--border-inl-end);
    background: var(--card-bg);
    line-height: 1.5;
}

.source {
    padding-block-start: 0.5rem;
}

/* IMAGES */
figcaption {
    font-size: var(--caption-font-size);
}

img {
    inline-size: 95%;
    block-size: 200px;
    object-fit: cover; /* consider using scale-down instead of cover. maybe change size of portrait img */
    object-position: top;
    border-radius: var(--border-radius);
    border-block-start: 1px solid rgba(255, 255, 255, 0.5);
    border-inline-end: 0.5px solid rgba(255, 255, 255, 0.5);
    box-shadow: -5px 10px 15px 2.5px rgba(0, 0, 0, 0.4);
    transition: 700ms linear 100ms;
}
img:hover,
img:focus {
    filter: hue-rotate(200deg);
}

footer {
    position: absolute;
    inset-block-end: 0;
    inline-size: 100%;
    padding: 1rem;
    text-align: center;
    max-block-size: 74px;
}

/* ABOUT PG */
#about-main {
    display: flex;
    justify-content: center;
    align-items: center;
    min-block-size: 100vh;
}
#about-article {
    background: var(--card-bg);
    -webkit-backdrop-filter: blur(40px);
    backdrop-filter: blur(40px);
    border-radius: var(--border-radius);
    border-block-start: var(--border-blc-st);
    border-inline-end: var(--border-inl-end);
    box-shadow: var(--card-shadow);
    padding-inline: var(--pad-inl-abt-art);
}
#about-p {
    text-align: start;
    max-inline-size: 65ch;
    margin-inline: auto;
    margin-block: var(--marg-blc-about);
    font-size: var(--about-p-font-size);
}

/* CONTACT PG */
#socials {
    display: flex;
    justify-content: center;
    font-size: var(--socials-icon-size);
    padding-block: 2rem;
}
#socials > li {
    padding-inline: 1.2rem;
}
#socials a {
    display: flex;
}

/* PG TRANSITION */
.transition-1 {
    position: fixed;
    inset-block: 0;
    inset-inline: 0;
    z-index: 11;
    background-color: var(--nav-bg);
    /* so it won't be active by default */
    opacity: 0;
    /* blocks interactivity of page while in transition (works on block or inline-block elements */
    pointer-events: none;
    /* need to know duration b/c in js we need to set a timer delay so we can guess & work w/ the transitions */
    transition: var(--transition-value);
}
/* the state when it's active (appears on screen) */
.transition-1.is-active {
    opacity: 1;
    pointer-events: all;
}

/* no need to block pointer-events since sliding in/out */
/* improved pg performance via addressing the Cumulative Layout Shifts w/o use of will-change */
.transition-2 {
    position: fixed;
    z-index: 11;
    background-color: var(--nav-bg);
    block-size: 100%;
    inline-size: 100%;
    transform: translateX(100%);
    transition: var(--transition-value);
}
.transition-2.is-active {
    transform: translateX(0);
}

.transition-3 {
    position: fixed;
    block-size: 100%;
    inline-size: 100%;
    transform: translateY(100%);
    z-index: 11;
    background-color: var(--nav-bg);
    transition: var(--transition-value);
}
.transition-3.is-active {
    transform: translateY(0);
}

.transition-4 {
    position: fixed;
    block-size: 100%;
    inline-size: 100%;
    transform: translateY(-100%);
    z-index: 11;
    background-color: var(--nav-bg);
    transition: var(--transition-value);
}
.transition-4.is-active {
    transform: translateY(0);
}

.transition-5 {
    position: fixed;
    block-size: 100%;
    inline-size: 100%;
    transform: translateX(-100%);
    z-index: 11;
    background-color: var(--nav-bg);
    transition: var(--transition-value);
}
.transition-5.is-active {
    transform: translateX(0);
}

/* @media (prefers-reduced-motion) {
    img {
        transition: none;
    }
} */

/* @media screen and (min-width: 1025px) {
} */

